added video link in description
added video link in description

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <img src="img/ddp.jpg" alt="Design Development Plan">
         <p> The design development plan followed to was define functional requirements, to find what functionality the system would need.</p>
         <p> 2. From there we made a trade study to find different sensors on the market and their related cost.</p>
-        <p> 3. With the sensors in-house we could rapid prototype obtaining the prototype and developing the front-end UI.</p>
+        <p> 3. With the sensors in-house we could rapid prototype obtaining the prototype and developing the front-end UI. Here is a video demonstrating the basic functionality of the design</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ghJOWtjjYhg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </body>
     <footer>
       <ul class="meta inline-list">
