--- a/index.html
+++ b/index.html
@@ -1,44 +1,100 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Montserrat" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="css/style2.css">
-    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <meta charset="utf-8" />
+    <link
+      href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Montserrat"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="stylesheet" type="text/css" href="css/style2.css" />
+    <link rel="icon" href="favicon.png" type="image/x-icon" />
     <title>Iot Plant Monitor</title>
   </head>
   <body>
     <div class="wrapper">
-    <div class="container">
-      <header>
-        <h1 class="name">Iot Plant Monitor</h1>
-      </header>
-      <body>
-        <h2>Motivation</h2>
-        <p>By the year 2050, the world’s population could exceed 10 billion. Feeding that population means a substantial increase in food production as .  more sustainable farming infrastructure. The essence of Precision Agriculture is to provide a sensor platform connected to the cloud combined with aerial/satellite imagery to enable data analytics to farmers/decision makers to help reduce amount of water/nutrients required.</p>
-        <h3>Sensors</h3>
-        <p> The IOT Plant monitor utilizes two basic Sensors:</p>
-        <br>
+      <div class="container">
+        <header><h1 class="name">Iot Plant Monitor</h1></header>
+        <body>
+          <h2>Motivation</h2>
+          <p>
+            By the year 2050, the world’s population could exceed 10 billion.
+            Feeding that population means a substantial increase in food
+            production and a push for a more sustainable farming infrastructure.
+            The essence of Precision Agriculture is to provide a sensor platform
+            connected to the cloud combined with aerial/satellite imagery to
+            enable data analytics for farmers/decision makers to help reduce the
+            amount of resources (water/nutrients) required. The IOT Plan Monitor
+            is a basic demonstration of sensor data that can be obtained and
+            reported remotely to a server. Combining historical data with
+            machine learning techniques the IOT Plant Monitor could
+            revolutionize the future of agriculture and take a giant leap
+            forward in tackling world hunger.
+          </p>
+          <h3>Sensors</h3>
+          <p>
+            The IOT Plant monitor utilizes two basic Sensors (but is scalable to
+            more to cover acres of land):
+          </p>
+          <br />
           <p>1.Soil Temperature</p>
-          <br>
+          <br />
           <p>2.Soil Moisture</p>
-          <br>
-          <p> These sensors are common in agriculture to track how farmers utilize their resources (water, fertilizers, nutrients) which affects yeild and profit margins later on.</p>
-        <h4> Design Development Plan</h4>
-        <br>
-        <img src="img/ddp.jpg" alt="Design Development Plan">
-        <p> The design development plan followed to was define functional requirements, to find what functionality the system would need.</p>
-        <p> 2. From there we made a trade study to find different sensors on the market and their related cost.</p>
-        <p> 3. With the sensors in-house we could rapid prototype obtaining the prototype and developing the front-end UI. Here is a video demonstrating the basic functionality of the design</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/ghJOWtjjYhg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </body>
-    <footer>
-      <ul class="meta inline-list">
-        <li><a href="mailto:to.keith.menezes@hotmail.com">to.keith.menezes@hotmail.com</a></li>
-        <li><a href="http://www.github.com/kmenezes" target="_blank">github/kmenezes</a></li>
-      </ul>
-    </footer>
-  </div>
-  </div>
+          <br />
+          <p>
+            These sensors are common in agriculture to track how farmers utilize
+            their resources (water, fertilizers, nutrients) which affects yeild
+            and profit margins later on.
+          </p>
+          <h4>Design Development Plan</h4>
+          <br />
+          <img src="img/ddp.jpg" alt="Design Development Plan" />
+          <p>
+            The design development plan followed to was define functional
+            requirements, to find what functionality the system would need.
+          </p>
+          <p>
+            2. From there we made a trade study to find different sensors on the
+            market and their related cost.
+          </p>
+          <p>
+            3. With the sensors in-house we could rapid prototype obtaining the
+            prototype and developing the front-end UI. Here is a video
+            demonstrating the basic functionality of the design
+          </p>
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/ghJOWtjjYhg"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+          <br />
+          <h5>Final Product</h5>
+          <p>
+            The final product ran the main.py script through Putty and displayed
+            the output over the terminal
+          </p>
+          <br />
+          <h6>Works Cited & References</h6>
+          <p>1. w1thermalsensor 2. GPIO 3. Fork-N-Go webpage jlord.github.io 4. Ubiquity Robot Rpi Image Ubuntu 16.04</p>
+        </body>
+        <footer>
+          <ul class="meta inline-list">
+            <li>
+              <a href="mailto:to.keith.menezes@hotmail.com"
+                >to.keith.menezes@hotmail.com</a
+              >
+            </li>
+            <li>
+              <a href="http://www.github.com/kmenezes" target="_blank"
+                >github/kmenezes</a
+              >
+            </li>
+          </ul>
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
