added parts cost

--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
             more to cover acres of land):
           </p>
           <br />
-          <p>1.Soil Temperature</p>
+          <p>1.Soil Temperature Sensor (XCSOURCE 5PCS Temperature Sensor DS18B20, $15.99 from Amazon)</p>
           <br />
-          <p>2.Soil Moisture</p>
+          <p>2.Soil Moisture Sernsor (Kuman 5PCS Soil Moisture Sensor Kit, $8.99 from Amazon)</p>
           <br />
           <p>
             These sensors are common in agriculture to track how farmers utilize
             their resources (water, fertilizers, nutrients) which affects yeild
-            and profit margins later on.
+            and profit margins later on. The total cost was around $28 and was programmed with Python.
           </p>
           <h4>Design Development Plan</h4>
           <br />
-          <img src="img/ddp.jpg" alt="Design Development Plan" />
+          <img src="img/ddp.jpg" alt="Design Development Plan"/>
           <p>
             The design development plan followed to was define functional
             requirements, to find what functionality the system would need.
